--- a/www/var/html/index.html
+++ b/www/var/html/index.html
@@ -6,5 +6,9 @@
 	</head>
 	<body>
 		<h1>hello webserv</h1>
+
+		<p>This page is only an example.</p>
+
+		<p>Click <a href="page2.html">here</a></p>
 	</body>
 </html>
