--- a/www/var/html/page2.html
+++ b/www/var/html/page2.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8" />
 		<title>Example Page 2</title>
 	</head>
 	<body>
@@ -7,8 +9,9 @@
 		<h1>Example Page 2</h1>
 		
 		<p>This page is another example. <a href="/">Return.</a></p>
-		<form action="post" >
-			
+		<form action="/board" method="POST">
+			<textarea name="content" placeholder="내용 입력"></textarea>
+			<input type="submit" value="submit"/>
 		</form>
 	</body>
 </html>
