subject descriptions added to index.html

--- a/www/var/html/index.html
+++ b/www/var/html/index.html
@@ -5,10 +5,18 @@
 		<title>webserv</title>
 	</head>
 	<body>
-		<h1>hello webserv</h1>
-
-		<p>This page is only an example.</p>
-
-		<p>Click <a href="page2.html">here</a></p>
+		<h1>42 webserv</h1>
+		<h3>This is when you finally understand why a URL starts with HTTP</h3>
+		<hr>
+		<p>author : yoahn, sunhkim</p>
+		<p>Click <a href="page2.html">here</a> to test html methods</p>
+		<li>
+			Subject
+			<ul>Make nginx-like html server</ul>
+			<ul>Read Config file to configuration</ul>
+			<ul>GET, POST, DELETE methods</ul>
+			<ul>Parse vaild REQUEST and make good RESPONSE with vaild response code</ul>
+			<ul>Run CGI program(Gateway)</ul>
+		</li>
 	</body>
 </html>
