--- a/www/var/html/index.html
+++ b/www/var/html/index.html
@@ -9,7 +9,7 @@
 		<h3>This is when you finally understand why a URL starts with HTTP</h3>
 		<hr>
 		<p>author : yoahn, sunhkim</p>
-		<p>Click <a href="page2.html">here</a> to test html methods</p>
+		<p>Click <a href="board.html">here</a> to test html methods</p>
 		<li>
 			Subject
 			<ul>Make nginx-like html server</ul>
