server pingpong test

--- a/www/html/board.html
+++ b/www/html/board.html
@@ -10,6 +10,7 @@
 		
 		<p>This page is another example. <a href="/">Return.</a></p>
 		<form action="/board" method="POST">
+			<input type="text" name="title"/>
 			<textarea name="content" placeholder="내용 입력"></textarea>
 			<input type="submit" value="submit"/>
 		</form>
