--- a/www/html/board.html
+++ b/www/html/board.html
@@ -9,10 +9,12 @@
 		<h1>Example Page 2</h1>
 		
 		<p>This page is another example. <a href="/">Return.</a></p>
-		<form action="/board" method="POST">
-			<input type="text" name="title"/>
-			<textarea name="content" placeholder="내용 입력"></textarea>
-			<input type="submit" value="submit"/>
-		</form>
+		<div>
+			<form action="/board" method="POST">
+				<input type="text" name="title"/>
+				<textarea name="content" placeholder="내용 입력"></textarea>
+				<input type="submit" value="submit"/>
+			</form>
+		</div>
 	</body>
 </html>
