error page making method, board page html update

--- a/www/html/board.html
+++ b/www/html/board.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>Example Page 2</title>
+		<title>Board</title>
 	</head>
 	<body>
 		
-		<h1>Example Page 2</h1>
+		<h1>HTTP Test Board</h1>
 		
-		<p>This page is another example. <a href="/">Return.</a></p>
+		<p>You can test HTTP methods(select, post, delete) by click buttons in this page. </p>
+		<p> Or <a href="/">return home</a>.</p>
 		<div>
 			<form action="/board" method="POST">
 				<input type="text" name="title"/>
