--- a/www/html/board.html
+++ b/www/html/board.html
@@ -12,9 +12,9 @@
 		<p> Or <a href="/">return home</a>.</p>
 		<div>
 			<form action="/board" method="POST">
-				<input type="text" name="title"/>
-				<textarea name="content" placeholder="내용 입력"></textarea>
-				<input type="submit" value="submit"/>
+				<p><input type="text" name="title" placeholder="title"/></p>
+				<p><textarea name="content" placeholder="description"></textarea></p>
+				<p><input type="submit" value="제출"/></p>
 			</form>
 		</div>
 	</body>
