--- a/www/html/board.html
+++ b/www/html/board.html
@@ -11,6 +11,10 @@
 		<p>You can test HTTP methods(select, post, delete) by click buttons in this page. </p>
 		<p> Or <a href="/">return home</a>.</p>
 		<div>
+			<form action="/board/content" method="GET">
+			</form>
+		</div>
+		<div>
 			<form action="/board/content" method="POST">
 				<p><input type="text" name="title" placeholder="title"/></p>
 				<p><textarea name="content" placeholder="description"></textarea></p>
