edit html files

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -8,8 +8,8 @@
 		<h1>42 webserv</h1>
 		<h3>This is when you finally understand why a URL starts with HTTP</h3>
 		<hr>
-		<p>author : yoahn, sunhkim</p>
-		<p>Click <a href="board.html">here</a> to test html methods</p>
+		<p>code author : yoahn, sunhkim, jekim, dahpark</p>
+		<p>Use curl to test html methods</p>
 		<li>
 			Subject
 			<ul>Make nginx-like html server</ul>
